--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,7 @@ html {
 }
 
 body {
-    /* background: linear-gradient(to right, #614385, #516395); */
-    /* background-image: url('/img/bg.jpg'); */
-    background-color: rgb(29, 21, 21);
-    background-size: cover;
+    background-color: rgb(0, 0, 0);
     color: white;
     min-height: 100vh;
     text-align: center;
@@ -20,17 +17,18 @@ body {
 }
 
 p {
-    font-size: 20px;
+    font-size: 25px;
     font-weight: bold;
-    color: rgb(0, 218, 247);
-    margin-bottom: 60px;
+    letter-spacing: 5px;
+    color: rgb(252, 252, 252);
+    margin-bottom: 45px;
 }
 
 img {
     margin-top: 40px;
     width: 180px;
     border-radius: 60%;
-    border: 3px solid rgb(81, 217, 241);
+    border: 3px solid rgb(123, 234, 253);
 }
 
 .featured {
